<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2E6EB"
    tools:context=".InputFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#4A8B99"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeui"
            android:padding="24dp"
            android:text="@string/ndice_de_massa_corporal_imc"
            android:textAlignment="center"
            android:textColor="#FEF9F9"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/peso"
                android:fontFamily="@font/segoeui"
                android:text="@string/peso"
                android:textColor="#4A8B99"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:background="@drawable/input"
                android:backgroundTint="#FEF9F9"
                android:ems="10"
                android:fontFamily="@font/segoeui"
                android:hint="Insira o seu peso"
                android:inputType="numberDecimal"
                android:labelFor="@id/tvWeight"
                android:textAlignment="center"
                android:textColorHint="?android:attr/textColorHint" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeui"
                android:text="@string/kg"
                android:textColor="#4A8B99"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/altura"
                android:fontFamily="@font/segoeui"
                android:text="@string/altura"
                android:textColor="#4A8B99"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:background="@drawable/input"
                android:backgroundTint="#FEF9F9"
                android:ems="10"
                android:fontFamily="@font/segoeui"
                android:hint="@string/insira_sua_altura"
                android:inputType="numberDecimal"
                android:labelFor="@id/tvWeight"
                android:textAlignment="center"
                android:textColorHint="?android:attr/textColorHint" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeui"
                android:text="@string/cm"
                android:textColor="#4A8B99"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:backgroundTint="#4A8B99"
        android:hapticFeedbackEnabled="false"
        android:paddingLeft="30dp"
        android:paddingTop="15dp"
        android:paddingRight="30dp"
        android:paddingBottom="15dp"
        android:shadowColor="#474343"
        android:text="@string/calcular"
        android:textAlignment="center"
        android:textColor="#FEF9F9"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>


